2012-03-27  Peter Bloomfield

	Remember geometry of MRU mailbox tree

	* src/balsa-app.h: new members mru_tree_{width,height}
	* src/balsa-mblist.c (bmbl_mru_size_allocate_cb): save them when
	the dialog's size is changed;
	(bmbl_mru_show_tree): use the saved values.
	* src/save-restore.c (config_global_load), (config_save): save
	and restore them.

2012-03-20  Peter Bloomfield

	* configure.in: work around "intltool-update -m" bug: it knows
	about m4_esyscmd, not m4_esyscmd_s.

2012-03-06  Peter Bloomfield

	* src/main-window.c: update last-check-time only if connected.

2012-03-06  Peter Bloomfield

	* src/main-window.c: check local mailboxes even when network is
	not connected.

2012-03-06  Peter Bloomfield

	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_passphrase): build
	with --disable-threads.

2012-02-08  Albrecht Dreß

	* libbalsa/gmime-part-rfc2440.c (g_mime_part_rfc2440_verify):
	check for empty return from GpgME.

2012-02-03  Peter Bloomfield

	* configure.in: remove obsolete BUILD_WITH_GNOME.

2011-12-20  Peter Bloomfield

	* configure.in: use git tag to set version.

2011-12-20  Peter Bloomfield

	* Makefile.am: drop GNOME_Balsa.server.in from balsa_extra_dist.

2011-12-20  Peter Bloomfield

	* .gitignore: add .libs.

2011-12-20  Albrecht Dreß

	* libbalsa/rfc3156.c: suppress GLib warning when the message is
	only encrypted; return 'no error' for encrypted-only RFC 2440
	messages; re-wrap a few over-long lines
	* src/balsa-message.c: properly pick up return values from
	libbalsa
	* src/balsa-mime-widget-crypto.[hc]: changes needed for drawing
	encrypted-only frame
	* src/balsa-mime-widget-multipart.c: use new crypto frame api
	* src/balsa-mime-widget.c: draw frame around encrypted-only rfc
	2440 part
	* src/print-gtk.c: encrypted-only frame print implementation

2011-12-18  Peter Bloomfield

	* src/main.c (balsa_check_open_mailboxes),
	(scan_mailboxes_idle_cb), (balsa_check_open_compose_window),
	(real_main), (handle_remote): reuse identical code.
