@@ -418,8 +418,7 @@ balsa_app_init(void)
 #endif
 
     /* Message filing */
-    balsa_app.folder_mru=NULL;
-    balsa_app.fcc_mru=NULL;
+    balsa_app.folder_mru = NULL;
 
     g_object_set(gtk_settings_get_for_screen(gdk_screen_get_default()),
                  "gtk-fallback-icon-theme", "gnome", NULL);
